# SyncDog

./: .gitignore  README.md  main.py  main_eval.py  makefile.spec  pyproject.toml  requirements.txt
UI/: SyncDogUI.ui  Xfer.ui  mirror.ai  sync.ai  sync_arrow.ai  syncdog-full.ai  syncdog-icon.ai  ui_syncfiles.ui
syncdog/: SyncDog.py  SyncDogWindow.py  SyncFiles.py  __init__.py  base_handler.py  bsdiff_file_handler.py  constants.py  file_handler.py  mirror_handler.py  observer.py  sync_files.py  syncdog_file_handler.py  syncdog_observer.py  syncdog_ui.py  syncdog_window.py  ui.py  window.py
syncdog/utilities/: interval.py  minimal_asyncio.py
syncdog/utils/: __init__.py  interval.py
syncfiles/: SyncFiles.py  __init__.py  constants.py  syncfileswindow.py  ui_syncfiles.py
syncfiles/utilities/: PySide6Tools.py
tests/: test_file_handler.py  test_inteval.py  test_main.py  test_observer.py  test_syncdog_observer.py  test_syncdog_window.py  test_window.py
tests/syncdog/: test_base_handler.py  test_file_handler.py  test_inteval.py  test_mirror_handler.py  test_observer.py  test_window.py
