[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "syncdog"
version = "0.1.0"
description = "Sync files between two directories"
authors = ["Toan Nguyen <toann1980@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
GetFiles = { git = "https://github.com/toann1980/GetFiles.git" }
Logger = { git = "https://github.com/toann1980/Logger.git" }
aioshutil = "^1.3"
PySide6 = "^6.7.0"
PySide6_Addons = "^6.7.0"
PySide6_Essentials = "^6.7.0"
shiboken6 = "^6.7.0"